<resources>
    <string name="app_name">Notification Center for Pebble</string>
    <string name="title_activity_main">Notification Center</string>
    <string name="notifierLicense">
<![CDATA[
	<p><strong>Pebble Notifier</strong></p>

<p>Copyright (c) 2013 Dattas Moonchaser</p>

<p>Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:</p>

<p>The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.</p>

<p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</p>

	<p><strong>Java WebSocket</strong></p>

 <p>Copyright (c) 2010-2012 Nathan Rajlich</p>

 <p>Permission is hereby granted, free of charge, to any person
 obtaining a copy of this software and associated documentation
 files (the "Software"), to deal in the Software without
 restriction, including without limitation the rights to use,
 copy, modify, merge, publish, distribute, sublicense, and/or sell
 copies of the Software, and to permit persons to whom the
 Software is furnished to do so, subject to the following
 conditions:</p>

 <p>The above copyright notice and this permission notice shall be
 included in all copies or substantial portions of the Software.

 <p>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
 EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
 OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
 HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
 WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
 FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 OTHER DEALINGS IN THE SOFTWARE.</p>
]]>
    </string>
    <string-array name="app_modes">
        <item>Excluding mode</item>
        <item>Including mode</item>
    </string-array>
    <string-array name="vibrationModeValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="shakeActions">
        <item>Nothing</item>
        <item>Stop periodic vibration</item>
        <item>Dismiss notification</item>
    </string-array>
    <string-array name="shakeActionValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
	<string-array name="lightNotifications">
	    <item>Never</item>
	    <item>Always</item>
	    <item>After sunset</item>
	</string-array>
	<string-array name="lightNotificationValues">
	    <item>1</item>
	    <item>2</item>
	    <item>3</item>
	</string-array>
    <string-array name="pebbleFonts">
        <item>Gothic 14</item>
        <item>Gothic 14 Bold</item>
        <item>Gothic 18</item>
        <item>Gothic 18 Bold</item>
        <item>Gothic 24</item>
        <item>Gothic 24 Bold</item>
        <item>Gothic 28</item>
        <item>Gothic 28 Bold</item>
        <item>Bitham 30 Black</item>
        <item>Bitham 42 Bold</item>
        <item>Bitham 42 Light</item>
        <item>Bitham 42 Medium Numbers</item>
        <item>Bitham 34 Medium Numbers</item>
        <item>Bitham 34 Light Subset</item>
        <item>Bitham 18 Light Subset</item>
        <item>Roboto 21 Condensed</item>
        <item>Roboto 49 Subset</item>
        <item>Droid Serif 28 Bold</item>
    </string-array>
    <string-array name="fontValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
    </string-array>
    <string-array name="tasker_actions">
        <item>Send notification</item>
        <item>Change setting</item>
    </string-array>
    <string-array name="pebble_app_options">
        <item>NC Notification</item>
        <item>Pebble Notification</item>
        <item>No Notification</item>
    </string-array>
    <string name="title_activity_tasker_setup">TaskerSetupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="appModePickerLabel">App Selection:</string>
    <string name="appModePickerDescription">In <b>including</b> mode only notifications from the apps that are selected will sent to Pebble. In <b>excluding</b> mode all notifications will be sent to Pebble except those from applications selected.</string>
    <string-array name="appModePickerModes">
        <item>Exclude</item>
        <item>Include</item>
    </string-array>
    <string name="regexModePickerLabel">Regex Filters:</string>
    <string name="regexModePickerDescription">Global filter by keywords/regular expressions for notifications that should be included/excluded from displaying.</string>
    <string-array name="regexModePickerModes">
        <item>Exclude</item>
        <item>Include</item>
    </string-array>
    <string-array name="settingSelectButtonAction">
        <item>Nothing</item>
        <item>Dismiss notification</item>
        <item>Open actions menu</item>
        <item>Action menu item 1</item>
        <item>Action menu item 2</item>
        <item>Action menu item 3</item>
        <item>Action menu item 4</item>
        <item>Action menu item 5</item>
        <item>Action menu item 6</item>
        <item>Action menu item 7</item>
        <item>Action menu item 8</item>
        <item>Action menu item 9</item>
        <item>Action menu item 10</item>
        <item>Action menu item 11</item>
        <item>Action menu item 12</item>
        <item>Action menu item 13</item>
        <item>Action menu item 14</item>
        <item>Action menu item 15</item>
        <item>Action menu item 16</item>
        <item>Action menu item 17</item>
        <item>Action menu item 18</item>
        <item>Action menu item 19</item>
        <item>Action menu item 20</item>
    </string-array>
    <string-array name="settingActionVisibility">
        <item>Disable</item>
        <item>Above app actions</item>
        <item>Below app actions</item>
    </string-array>
    <string name="replacementListTitle">Regex Filters:</string>
    <string name="replacementListDescription">Global filter by keywords/regular expressions for notifications that should be included/excluded from displaying.</string>
    <string name="replacement_description">In this window you can define replacement pairs. Notification Center will swap specified characters with specified text. Use that to remove or translate characters that Pebble does not display to readable text.</string>
    <string name="original_character">Original character:</string>
    <string name="replacement">Replacement:</string>
    <string name="enterChracter">You need to enter one character or unicode code for it!</string>
    <string name="importNoFiles">No dictionary files found.\n\nPlace your replacement dictionary .txt files into NotificationCenter folder on your phone\'s storage and try again.</string>
    <string name="pebbleAppsDescription">NC is like any other app on Pebble - when notification comes, it will close whatever app was active. This is fine most of the time, but for some apps you might not want this (for example you wouldn\'t want to interrupt running stopwatch). \n\n This view allows you to set NC to produce native Pebble notifications or simply turn off notifications if specific app is open on Pebble. \n\n For this feature to work, you need to enable Developer Connection Pebble app settings.</string>
    <string name="pebbleAppLoadingError">Error while loading app list. Is your Pebble connected and Developer Connection
        enabled?
    </string>
    <string name="clearHistory">Clear History</string>
    <string name="deleteHistoryConfirm">Do you really want to clear whole notification history?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="historyCleared">History cleared</string>
    <string name="openingPebbleAppFailed">Opening Pebble app failed. Do you have Pebble app installed?</string>
    <string name="pebbleAppInstallDialog">Do you want to open Pebble App Store to install Notification Center to your
        Pebble?
    </string>
    <string name="openInPebbleAppStore">Open NC in Pebble App Store</string>
    <string name="PebbleAppsOther">Unknown</string>
    <string name="PebbleAppMainMenu">Main Menu</string>
    <string name="PebbleAppSettings">Settings</string>
    <string name="PebbleAppMusic">Music</string>
    <string name="PebbleAppNotificationHistory">Notifications (native)</string>
    <string name="PebbleAppAlarms">Alarms</string>
    <string name="PebbleAppWatchfaceList">Watchfaces (list)</string>
    <string name="PebbleWatchfaceSimplicity">Simplicity watchface</string>
    <string name="PebbleWatchfaceAnalog">Classic analog watchface</string>
    <string name="PebbleWatchfaceText">Text watchface</string>
    <string name="settingResetToDefault">Reset to default settings</string>
    <string name="settingResetToDefaultDescription">When you press this button, all below settings will reset to default settings and will automatically sync with default settings until you change them manually.</string>
    <string name="settingResetToDefaultButton">RESET</string>
    <string name="settingSendOngoing">Send ongoing notifications</string>
    <string name="settingSendOngoingDescription">Send notifications that are not just one time event, but something
        ongoing (for example ongoing file download or app instalation)
    </string>
    <string name="settingSendBlankNotifications">Send blank notifications</string>
    <string name="settingSendBlankNotificationsDescription">When checked, NC will also send completely blank
        notifications from this app
    </string>
    <string name="settingSwitchToRecent">Switch to most recent notification</string>
    <string name="settingSwitchToRecentDescription">When this is checked and new notification comes from this app, it
        will switch to that notification instead of queuing it.
    </string>
    <string name="settingDismissUpwards">Dismiss Upwards</string>
    <string name="backupConfigMenuOption">Backup Config</string>
    <string name="restoreConfigMenuOption">Restore Config</string>
    <string name="taskerPickYourAction">Pick your action:</string>
    <string name="taskerActionNotification">Send Notification</string>
    <string name="taskerActionGlobalSetting">Edit Global Setting</string>
    <string name="taskerActionAppSetting">Edit App Setting</string>
    <string name="noIntents">No intents</string>
    <string name="intentExtras">Extras</string>
    <string name="settingBroadcastIntentActions">Broadcast intent actions</string>
    <string name="settingBroadcastIntentActionsDescription">Use this when you want to trigger something in tasker-like
        apps or other 3rd party apps that support intent events.
    </string>
</resources>