<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_action_settings"
        android:title="Settings"
        android:orderInCategory="4"
       	/>

    <item
        android:id="@+id/action_test_notification"
        android:icon="@drawable/ic_action_pebble"
        android:title="Test Notification"
         android:orderInCategory="6"
        />

    <item
            android:id="@+id/clearHistory"
            android:title="@string/clearHistory"
            android:orderInCategory="7"
            />

    <item
            android:id="@+id/openInPebbleApp"
            android:title="@string/openInPebbleAppStore"
            android:orderInCategory="8"
            />

    <item
            android:id="@+id/backupConfig"
            android:title="@string/backupConfigMenuOption"
            android:orderInCategory="9"
            />


    <item
            android:id="@+id/restoreConfig"
            android:title="@string/restoreConfigMenuOption"
            android:orderInCategory="9"
            />



</menu>
