<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="10dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:text="@string/taskerPickYourAction"
            />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:width="200dp"
            android:text="@string/taskerActionNotification"
            android:onClick="notification"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:text="@string/taskerActionGlobalSetting"
            android:onClick="globalSetting"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:text="@string/taskerActionAppSetting"
            android:onClick="appSetting"/>

</LinearLayout>