<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/AppSettingParent"
                android:id="@+id/parentView">

        <TextView
                android:id="@+id/name"
                android:layout_alignParentLeft="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppSettingsName"
                android:text="@string/settingBroadcastIntentActions"
                />

        <TextView
                android:id="@+id/description"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_alignParentLeft="true"
                style="@style/AppSettingsDesc"
                android:text="@string/settingBroadcastIntentActionsDescription"

                />

    <Button
            android:id="@+id/addButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_below="@id/description"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="Add"/>

    <Button
            android:id="@+id/variablesButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/description"
            android:layout_toRightOf="@id/addButton"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/intentExtras"/>

    <LinearLayout
            android:id="@+id/listContainer"
            android:layout_below="@id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    </LinearLayout>

    <TextView
            android:id="@+id/listEmptyText"
            android:layout_below="@id/addButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noIntents"
            android:textStyle="italic"/>
</RelativeLayout>